prevent element title overflow

--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,12 @@ span.statusbar-organizer-row-handle {
   cursor: move;
 }
 
+span.statusbar-organizer-row-title {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 span.statusbar-organizer-row-handle::after {
   content: '·· ·· ·· ··';
   display: inline-block;
